--- a/03-frontend/base_files/index.html
+++ b/03-frontend/base_files/index.html
@@ -8,27 +8,51 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Aplication logo" class="logo">
+        <img src="logo.png" alt="Application logo" class="logo">
         <a href="login.html" class="login-button">Login</a>
     </header>
          
     <main>
         <h1 id="place-title">List of Places</h1>
         <section id="filter">
-            <label for="country-filter">Filter by Country:</label>
+            <label class= cF for="country-filter">Filter by Country:</label>
             <select id="country-filter">
+                <option value="All">All</option>
                 <!-- Options will be populated dynamically -->
             </select>
         </section>
         <div id="places-list">
-
             <div class="place-card">
                 <img src="place1.jpg" alt="Place 1" class="place-image">
                 <div class="place-info">
                     <h2 class="place-name">Place 1</h2>
                     <p class="place-price">Price per night: $100</p>
-                    <p class="place-location">Location: City, Country</p>
+                    <p class="place-location">Location: Dorado, Puerto Rico</p>
                     <button class="details-button">View Details</button>
+                </div>
+            </div>
+
+            <div class="place-card">
+                <img src="place2.jpg" alt="Place 2" class="place-image">
+                <div class="place-info">
+                    <h2 class="place-name">Place 2</h2>
+                    <p class="place-price">Price per night: $185</p>
+                    <p class="place-location">Location: Fajardo, Puerto Rico</p>
+                    <button class="details-button">View Details</button>
+                </div>
+            </div>
+
+            <div class="place-card">
+                <img src="place3.jpg" alt="Place 3" class="place-image">
+                <div class="place-info">
+                    <h2 class="place-name">Place 3</h2>
+                    <p class="place-price">Price per night: $165</p>
+                    <p class="place-location">Location: Rio Hondo, Puerto Rico</p>
+                    <button class="details-button">View Details</button>
+
+                </div>
+            </div>
+
 
         <section id="places-list">
             <!-- List of places will be populated dynamically -->
@@ -137,4 +161,7 @@
     </script>
     <script src="scripts.js"></script>
 </body>
+<footer>
+    <p>&copy; 2024 Your Company. All rights reserved.</p>
+</footer>
 </html>
